created html for UI

--- a/index.html
+++ b/index.html
@@ -2,22 +2,78 @@
 
 <html>
 
-    <head>
+<head>
 
-        <meta charset="utf-8"/>
+    <meta charset="utf-8" />
 
-        <link href="styles/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
 
-        <script type="text/javascript" src="scripts/script.js"></script>
+    <title>Rock Paper Scissors</title>
 
-        <title>Rock Papper Scissors</title>
+</head>
 
-    </head>
+<body>
 
-    <body>
+    <div id="pageTitle">
 
+        <h1>Rock Paper Scissors</h1>
 
+    </div>
 
-    </body>
+    <div id="gameContainer">
+
+        <div id="playerDiv">
+
+            <div id="playerScore">
+
+                <h2>Score:</h2>
+                <span></span>
+
+            </div>
+
+            <div id="playerButtons">
+
+                <button class="rock" id="playerRock"></button>
+
+                <button class="paper" id="playerPaper"></button>
+
+                <button class="Scissors" id="playerScissors"></button>
+
+            </div>
+
+        </div>
+
+        <div id="computerDiv">
+
+            <div id="computerScore">
+
+                <h2>Score:</h2>
+                <span></span>
+
+            </div>
+
+            <div id="computerButtons">
+
+                <button class="rock" id="computerRock"></button>
+
+                <button class="paper" id="computerPaper"></button>
+
+                <button class="Scissors" id="computerScissors"></button>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <div id="messageDiv">
+
+        <p></p>
+
+    </div>
+
+</body>
+
+<script type="text/javascript" src="scripts/script.js"></script>
 
 </html>
