--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 
             <div id="playerScore">
 
-                <h2>Score:</h2>
-                <span></span>
+                <h2> Player Score:</h2>
+                <span id="playerPoints">0</span>
 
             </div>
 
             <div id="playerButtons">
 
-                <button class="rock" id="playerRock"></button>
+                <button class="btnplayer" id="playerRock">Rock</button>
 
-                <button class="paper" id="playerPaper"></button>
+                <button class="btnplayer" id="playerPaper">Paper</button>
 
-                <button class="Scissors" id="playerScissors"></button>
+                <button class="btnPlayer" id="playerScissors">Scissors</button>
 
             </div>
 
@@ -47,18 +47,18 @@
 
             <div id="computerScore">
 
-                <h2>Score:</h2>
-                <span></span>
+                <h2>Computer Score:</h2>
+                <span id="computerPoints">0</span>
 
             </div>
 
             <div id="computerButtons">
 
-                <button class="rock" id="computerRock"></button>
+                <button class="rock" id="computerRock">Rock</button>
 
-                <button class="paper" id="computerPaper"></button>
+                <button class="paper" id="computerPaper">Paper</button>
 
-                <button class="Scissors" id="computerScissors"></button>
+                <button class="Scissors" id="computerScissors">Scissors</button>
 
             </div>
 
@@ -68,7 +68,7 @@
 
     <div id="messageDiv">
 
-        <p></p>
+        <p id="messagePara"></p>
 
     </div>
 
